# competitor_site_agent

./: .env  .env.example  .gitignore  main.py  pyproject.toml
src/: firecrawl.py  models.py  workflow.py
